# mars

./: .gitignore  .pre-commit-config.yaml  .pypi.json  .reviewdog.yml  .vale.ini  ACCOMPLISHMENTS.md  AGENTS.md  ANNOUNCEMENT.md  ANNOUNCEMENT_FINAL.md  BETA_ANNOUNCEMENT.md  BRANCH_STRUCTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_COMPLETE_ANNOUNCEMENT.md  FINAL_ACHIEVEMENT_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  FINAL_VERIFICATION_REPORT.md  GEMINI.md  GITHUB_RELEASE_ANNOUNCEMENT.md  GOVERNANCE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_AND_READY_FOR_PUBLICATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MATURATION_STRATEGY_SUMMARY.md  Makefile  PAPER_README.md  PRODUCTION_RELEASE_CHECKLIST.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETION_CERTIFICATION.md  PUBLISHING.md  PUBLISHING_TESTPYPI.md  PYMARSV1_COMPLETION_CERTIFICATE.md  QWEN.md  README.md  (+34 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  commit-convention.yml  dependabot.yml  labeler.yml  labels.yml  release-drafter.yml  renovate.json
bindings/: README.md
comparison_results/: pymars_friedman1_{'max_degree': 1, 'penalty': 0.01}.json  pymars_friedman1_{'max_degree': 1, 'penalty': 0.1}.json  pymars_friedman1_{'max_degree': 1, 'penalty': 1.0}.json  pymars_friedman1_{'max_degree': 2, 'penalty': 0.01}.json  pymars_friedman1_{'max_degree': 2, 'penalty': 0.1}.json  pymars_friedman1_{'max_degree': 2, 'penalty': 1.0}.json
conductor/: design.md  index.md  product-guidelines.md  product.md  requirements.md  sota-contract.md  tech-stack.md  tracks.md  workflow.md
docs/: 404.html  FINAL_CELEBRATION.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_MATURATION_PLAN.md  FINAL_PUBLISHING_READY.md  FINAL_PUBLISH_READY.md  FINAL_RELEASE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_CELEBRATION.md  IMPLEMENTATION_COMPLETE_CELEBRATION_FINAL.md  IMPLEMENTATION_COMPLETE_FINAL.md  IMPLEMENTATION_COMPLETE_FINAL_ANNOUNCEMENT.md  IMPLEMENTATION_COMPLETE_PUBLISH_READY.md  IMPLEMENTATION_FILES_SUMMARY.md  IMPLEMENTATION_OFFICIALLY_COMPLETE.md  IMPLEMENTATION_OFFICIAL_COMPLETE.md  IMPLEMENTATION_SUMMARY_FINAL.md  MATURATION_TODO_LIST.md  OFFICIALLY_COMPLETE.md  PUBLISHING_READY_CHECKLIST.md  PUBLISHING_READY_FINAL.md  README.md  READY_FOR_PUBLISHING.md  ULTIMATE_CELEBRATION.md  api.md  binding_abi_arrow_decision.md  binding_abi_contract.md  binding_backend_decisions.md  binding_release.md  bindings.md  changelog.md  ci_quality.md  community_submission_readiness.md  conformance.md  contributing.md  core_transition_evidence.md  design.md  ecosystem_foundation_alignment.md  hpc_claim_review_checklist.md  (+54 more)
examples/: __init__.py  basic_classification.py  basic_regression.py  pymars_demo.ipynb  pymars_real_data_example.ipynb  real_data_example.py  requirements.txt
mars/: analyzer.go  analyzer_test.go  errors.go  io.go  models.go
paper/: SUMMARY.md  SUMMARY_REVIEWED.md  _quarto.yml  _quarto_arxiv.yml  _quarto_jss.yml  arxiv_paper.tex  arxiv_template.tex  compile_paper.sh  healthcare_examples.py  index.qmd  jss.cls  jss_paper.tex  jss_template.tex  mars-arxiv.tex  mars-paper-revised.qmd  mars-paper-revised.tex  mars-paper-updated.qmd  mars-paper.qmd  mars_article.tex  mars_arxiv.tex  mars_jss.tex  mars_jss_final.tex  mars_jss_paper.tex  mars_paper_arxiv.qmd  mars_paper_jss.qmd  mars_paper_jss.tex  mars_references.bib  pymars-arxiv.tex  pymars-paper-revised.qmd  pymars-paper-revised.tex  pymars-paper-updated.qmd  pymars-paper.qmd  pymars_article.tex  pymars_arxiv.tex  pymars_jss.tex  pymars_jss_final.tex  pymars_jss_paper.tex  pymars_paper_arxiv.qmd  pymars_paper_jss.qmd  pymars_paper_jss.tex  (+4 more)
pymars/: __init__.py  __main__.py  _basis.py  _categorical.py  _compat.py  _forward.py  _missing.py  _model_spec.py  _pruning.py  _record.py  _sklearn_compat.py  _types.py  _util.py  accelerator.py  accelerator_backends.py  accelerator_validation.py  advanced_cv.py  advanced_glm.py  cache.py  cli.py  cluster.py  cluster_worker.py  cv.py  earth.py  explain.py  glm.py  parallel.py  plot.py  runtime.py  sparse.py  specialized_accelerator_backends.py
pymars_runtime/: __init__.py
rust-runtime/: Cargo.toml  README.md  deny.toml
rust-runtime/benches/: runtime_bench.rs
rust-runtime/src/: errors.rs  foreign.rs  lib.rs  model_spec.rs  python.rs  runtime.rs  training.rs
rust-runtime/tests/: fixture_tests.rs  foreign_tests.rs  forward_pass_parity_tests.rs  forward_pass_tests.rs  pruning_tests.rs  replay_fixture_tests.rs  training_fixture_tests.rs  training_tests.rs
rust-runtime/tests/fixtures/: model_spec_interaction.json  model_spec_v1.json
scripts/: analyze_coverage.py  benchmark_accelerator_validation.py  benchmark_runtime_threads.py  check_conda.sh  check_coverage.sh  check_hpc_claims.py  check_hpc_claims.sh  check_pypi.sh  check_release_alignment.py  check_releases.sh  check_runs.sh  cicd_pipeline.sh  comparison.py  comprehensive_verification.py  enhanced_profile.py  final_verification.py  final_verification_publish.py  generate_training_fixtures.py  line_profile.py  memory_profile.py  profile_earth.py  profile_pymars.py  publish_helper.py  quick_verify.py  release.py  release.sh  run_benchmarks.py  run_ty.sh  setup_tests.sh  type_verification.py  verify_beta.py  verify_coverage.py  verify_publishing.py  verify_release.py  verify_robustness.py
tests/: __init__.py  comparison.py  test_accelerator_backends.py  test_accelerator_runtime.py  test_accelerator_validation.py  test_additional_coverage.py  test_advanced_analysis.py  test_basis.py  test_benchmark.py  test_binding_conformance.py  test_categorical.py  test_categorical_edge_cases.py  test_cli_comprehensive.py  test_cli_comprehensive2.py  test_cluster_runtime.py  test_comprehensive_maturation.py  test_coverage_helpers.py  test_earth.py  test_earth_additional.py  test_earth_comprehensive_edge_cases.py  test_earth_edge_cases.py  test_earth_no_basis_functions.py  test_endurance.py  test_enhanced_validation.py  (+31 more)
(+546 files in other folders)
