[project]
name = "mars-earth"
version = "1.0.4"
description = "A Pure Python Implementation of Multivariate Adaptive Regression Splines"
readme = "README.md"
authors = [
    {name = "Dylan A Mordaunt", email = "dylan@mordaunt.dev"}
]
maintainers = [
    {name = "Dylan A Mordaunt", email = "dylan@mordaunt.dev"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
]
keywords = [
    "mars",
    "multivariate adaptive regression splines",
    "machine learning",
    "scikit-learn",
    "regression",
    "classification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/edithatogo/mars"
Documentation = "https://edithatogo.github.io/mars/"
Repository = "https://github.com/edithatogo/mars"
Changelog = "https://github.com/edithatogo/mars/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/edithatogo/mars/issues"

[project.optional-dependencies]
pandas = ["pandas>=1.3.0"]
cli = ["pandas>=1.3.0", "click>=8.0.0", "rich>=12.0.0"]
profiling = ["scalene>=1.5.0", "py-spy>=0.3.0"]
dev = [
    # Package management
    "uv>=0.1.0",
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-sugar>=0.9.0",
    "hypothesis>=6.90.0",
    "mutmut>=2.4.0",
    "nbmake>=1.4.0",
    "diff-cover>=8.0.0",
    # Linting & formatting
    "ruff>=0.4.0",
    "ty>=0.0.30",
    "pre-commit>=3.6.0",
    # Security
    "bandit>=1.7.6",
    "safety>=2.4.0",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mike>=2.0.0",
    # Release
    "python-semantic-release>=9.0.0",
    # Other
    "pandas>=1.3.0",
    "tox>=4.11.0",
]

[project.scripts]
mars = "pymars.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pymars", "pymars.demos"]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
version = {attr = "pymars.__version__"}

# ============================================================
# Ruff configuration (comprehensive rules)
# ============================================================
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["pymars", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # complexity (like mccabe)
    "B",      # bugbear
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "BLE",    # flake8-blind-except
    "S",      # flake8-bandit
    "C9",     # mccabe complexity
    "SIM",    # simplify code
    "ARG",    # unused arguments
    "PERF",   # performance anti-patterns
    "RUF",    # ruff-specific rules
    "PTH",    # use pathlib instead of os.path
    "FLY",    # use f-strings
    "RET",    # return statement analysis
]
ignore = [
    "ANN",    # Type annotations (handled by ty)
    "S101",   # Use of assert (needed in tests)
    "E501",   # Line length (handled by formatter)
    "C901",   # Too complex (handled by mccabe)
    "RUF013", # Implicit Optional (requires extensive code changes)
    "RUF012", # Mutable class attributes should be annotated
    "RUF059", # Unused unpacked variable
    "ARG",    # Unused arguments (requires API changes)
    "PTH",    # Use pathlib (requires refactoring)
    "BLE001", # Blind except (existing code pattern)
    "RET",    # Return statement analysis
    "UP006",  # Use builtin type annotation
    "UP035",  # Deprecated import
    "PERF",   # Performance (requires refactoring)
    "SIM102", # Nested if statements
    "SIM108", # Use ternary operator
    "SIM101", # Duplicate isinstance
    "RUF043", # Regex pattern
    "RUF015", # Access first element
    "RUF046", # Unnecessary cast
    "E701",   # Multiple statements on one line (legacy code)
    "F841",   # Local variable assigned but unused
    "F821",   # Undefined name (forward references in type hints)
    "E402",   # Module level import not at top of file
    "B904",   # Raise from err (legacy code pattern)
    "S301",   # Pickle unsafe (needed for model serialization)
    "W293",   # Blank line whitespace (trivial)
    "B007",   # Unused loop variable (test code)
    "E702",   # Multiple statements on one line (semicolon) (test code)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"pymars/demos/*" = ["E501", "S101", "T201"]
"tests/*" = ["S101", "ARG001", "PERF203"]
"scripts/*" = ["T201", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["pymars"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================
# ty configuration (strict mode)
# ============================================================
[tool.ty.environment]
python-version = "3.9"
root = ["."]

# ============================================================
# pytest configuration
# ============================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--cov=pymars",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (sklearn pipeline, CLI, I/O)",
    "e2e: End-to-end tests (complete workflows)",
    "slow: Slow tests (skip with -m 'not slow')",
    "golden: Golden master regression tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================
# Coverage configuration
# ============================================================
[tool.coverage.run]
source = ["pymars"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 90
show_missing = true

# ============================================================
# python-semantic-release configuration
# ============================================================
[tool.semantic_release]
version_variable = [
    "pyproject.toml:version",
    "pymars/__init__.py:__version__",
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"

[tool.semantic_release.publish]
dist_glob = "dist/*"
upload_to_pypi = true
upload_to_release = true

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

# ============================================================
# Mutation testing configuration (mutmut)
# ============================================================
[tool.mutmut]
paths_to_mutate = "pymars/"
backup = false
runner = "pytest -x"
tests_dir = "tests/"

# ============================================================
# Benchmarks configuration
# ============================================================
[tool.pytest-benchmark]
min_rounds = 5
max_time = 1.0
timer = "perf_counter"

[dependency-groups]
dev = [
    "ty>=0.0.30",
]
