[package]
name = "mars-earth"
version = "0.1.0"
edition = "2021"
description = "Portable runtime replay for mars ModelSpec artifacts"
license = "Apache-2.0"
repository = "https://github.com/edithatogo/mars"
readme = "README.md"

[lib]
name = "pymars_runtime"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "mars-runtime-cli"
path = "src/bin/mars-runtime-cli.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.24.1", features = ["abi3-py39"] }
